RESOLVED FIXED72088
Missing include in Tools/DumpRenderTree/chromium/AccessibilityUIElement.h:
https://bugs.webkit.org/show_bug.cgi?id=72088
Summary Missing include in Tools/DumpRenderTree/chromium/AccessibilityUIElement.h:
Lei Zhang
Reported 2011-11-10 20:15:43 PST
Doing some cleanup on the Chromium side and it failed to build due to a missing include here.
Attachments
patch (962 bytes, patch)
2011-11-11 11:36 PST, Lei Zhang
tony: review+
webkit.review.bot: commit-queue-
patch with the right base dir (998 bytes, patch)
2011-11-11 18:43 PST, Lei Zhang
no flags
Patch for landing (1.16 KB, patch)
2011-11-14 09:42 PST, Tony Chang
no flags
Lei Zhang
Comment 1 2011-11-11 11:36:00 PST
WebKit Review Bot
Comment 2 2011-11-11 18:10:44 PST
Comment on attachment 114746 [details] patch Rejecting attachment 114746 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: ueue/Tools/Scripts/svn-apply', u'--reviewer', u'Tony Chang', u'--force']" exit_code: 1 Parsed 2 diffs from patch file(s). patching file DumpRenderTree/chromium/AccessibilityUIElement.h Hunk #1 FAILED at 33. 1 out of 1 hunk FAILED -- saving rejects to file DumpRenderTree/chromium/AccessibilityUIElement.h.rej patching file ChangeLog Hunk #1 succeeded at 1 with fuzz 3. Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--reviewer', u'Tony Chang', u'--force']" exit_code: 1 Full output: http://queues.webkit.org/results/10453052
Lei Zhang
Comment 3 2011-11-11 18:20:15 PST
Did the patch need to be for Tools/DumpRenderTree/chromium/AccessibilityUIElement.h rather than DumpRenderTree/chromium/AccessibilityUIElement.h ?
Tony Chang
Comment 4 2011-11-11 18:37:45 PST
(In reply to comment #3) > Did the patch need to be for Tools/DumpRenderTree/chromium/AccessibilityUIElement.h rather than DumpRenderTree/chromium/AccessibilityUIElement.h ? Yeah, the base of the checkout has to be trunk of the repo.
Lei Zhang
Comment 5 2011-11-11 18:43:41 PST
Created attachment 114811 [details] patch with the right base dir
WebKit Review Bot
Comment 6 2011-11-11 18:48:02 PST
Attachment 114811 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Tools/ChangeLog', u'Tools/DumpRenderTree/c..." exit_code: 1 Tools/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tony Chang
Comment 7 2011-11-14 09:42:34 PST
Created attachment 114970 [details] Patch for landing
WebKit Review Bot
Comment 8 2011-11-14 09:56:56 PST
Comment on attachment 114970 [details] Patch for landing Clearing flags on attachment: 114970 Committed r100160: <http://trac.webkit.org/changeset/100160>
WebKit Review Bot
Comment 9 2011-11-14 09:57:00 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.