Missing include in Tools/DumpRenderTree/chromium/AccessibilityUIElement.h: https://bugs.webkit.org/show_bug.cgi?id=72088

Patch by Lei Zhang <thestig@chromium.org> on 2011-11-14
Reviewed by Tony Chang.

* DumpRenderTree/chromium/AccessibilityUIElement.h:

Canonical link: https://commits.webkit.org/88715@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100160 268f45cc-cd09-0410-ab3c-d52691b4dbfc